Significant design overhaul on HTML export.

--- a/org_style.css
+++ b/org_style.css
@@ -12,25 +12,29 @@
 
 body {
     padding: 0;
-    padding-bottom: 30px;
+    margin: 0;
+    flex-direction: column;
     display: flex;
-    justify-content: center;
+    align-items: center;
 }
 
-@media print {
-    body {
-        padding: 0 30px;
-    }
-
-    div#content {
-        max-width: auto;
-    }
+h1.title {
+    background: #121112;
+    color: #ffffff;
+    padding: 10px;
+    text-align: center;
+    margin: 0;
+    width: 100%;
 }
 
 div#content {
     width: 96%;
+    padding: 30px;
     max-width: 800px;
-    padding: 0 50px;
+}
+
+#content div:first-child h2 {
+    margin-top: 0;
 }
 
 body .anchor {
@@ -58,7 +62,7 @@ body {
     -webkit-text-size-adjust: 100%;
     line-height: 1.5;
     color: #24292e;
-    font-family: 'RomanAlternate', 'CMU Serif', 'Noto Serif Hebrew';
+    font-family: 'Optima', 'Noto Serif Hebrew';
     font-size: 16px;
     line-height: 1.5;
     word-wrap: break-word;
@@ -808,7 +812,7 @@ body code {
     padding: .2em .4em;
     margin: 0;
     font-size: 85%;
-    /* background-color: rgba(27,31,35,.05); */
+    background-color: rgb(70 144 217 / 26%);
     border-radius: 3px;
 }
 
@@ -841,8 +845,8 @@ body pre {
     overflow: auto;
     font-size: 85%;
     line-height: 1.45;
-    color: #383A42;
-    border-left: solid 3px #d0d8da;
+    color: #e7e7e7;
+    background: #121112;
     font-weight: 400;
 }
 
@@ -1043,35 +1047,6 @@ a.footref {
 .example {
     background-color: white !important;
     color: #24292e !important;
-}
-
-span.org-keyword {
-    color: #8c5337;
-    font-weight: bold;
-}
-
-span.org-constant {
-    color: #986801;
-}
-
-span.org-string {
-    color: #50A14F;
-}
-
-span.org-builtin {
-    color: #0184BC;
-}
-
-span.org-comment, span.org-comment-delimiter {
-    color: #929494;
-}
-
-span.org-operator-lock {
-    color: #9c6060;
-}
-
-span.org-method-call-lock {
-    color: #286a9e;
 }
 
 #table-of-contents h2 {
