--- a/org_style.css
+++ b/org_style.css
@@ -768,8 +768,10 @@ body dl dd {
 
 body table {
     display: block;
-    width: 100%;
+    width: fit-content;
     overflow: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 body table th {
@@ -845,7 +847,7 @@ body pre {
     overflow: auto;
     font-size: 85%;
     line-height: 1.45;
-    color: #e7e7e7;
+    color: #E0DBA9;
     background: #121112;
     font-weight: 400;
 }
